nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-custom
  namespace: nginx
spec:
  selector:
    app: "nginx-custom"
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
